--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <app-navbar></app-navbar>
 <div class="row">
-    <div class="col-md-6"><app-car></app-car></div>
-    <div class="col-md-3"><app-brand></app-brand></div>
-    <div class="col-md-3"><app-color></app-color></div>
+  <div class="col-md-3">
+    <div class="row"><app-brand></app-brand></div>
+    <div class="row"><app-color></app-color></div>
+  </div>
+  <div class="col-md-9">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<div class="row">
-    <div class="col-md-6"><app-customer></app-customer></div>
-    <div class="col-md-6"><app-rental></app-rental></div>
-</div>
-
-<router-outlet></router-outlet>
