--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,16 +1,10 @@
-<div *ngIf="dataLoaded==false" class="spinner-border " role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <table *ngIf="dataLoaded==true" class="table">
-    <thead>
-      <tr>
-        <th>Brand Name</th>
-        
-      </tr>
-    </thead>
-    <tr *ngFor="let brand of brands">
-      <td>{{ brand.brandName }}</td>
-     
-    </tr>
-  </table>
-  
+<ul class="list-group list-group-horizonta">
+  <h4>Araba Markaları</h4>
+  <li (click)="setCurrentBrand(brand)"
+  routerLink="/cars/brands/{{brand.brandId}}" 
+  *ngFor="let brand of brands" 
+  [class]="getCurrentBrandClass(brand)">
+    {{brand.brandName}}
+  </li>
+</ul>
+<h5 *ngIf="currentBrand">{{currentBrand.brandName}} seçtiniz</h5>
