--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,16 +1,9 @@
-<div *ngIf="dataLoaded==false" class="spinner-border " role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <table *ngIf="dataLoaded==true" class="table">
-    <thead>
-      <tr>
-        <th>Color Name</th>
-        
-      </tr>
-    </thead>
-    <tr *ngFor="let color of colors">
-      <td>{{ color.colorName }}</td>
-     
-    </tr>
-  </table>
-  
+  <ul class="list-group list-group-horizonta">
+    <h4>Araba Renkleri</h4>
+    <li (click)="setCurrentColor(color)"
+    routerLink="/cars/colors/{{color.colorId}}" 
+    *ngFor="let color of colors" 
+    [class]="getCurrentColorClass(color)">
+      {{color.colorName}}
+    </li>
+  </ul>
