--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,10 +1,41 @@
-<ul class="list-group list-group-horizonta">
-  <h4>Araba Markaları</h4>
-  <li (click)="setCurrentBrand(brand)"
-  routerLink="/cars/brands/{{brand.brandId}}" 
-  *ngFor="let brand of brands" 
-  [class]="getCurrentBrandClass(brand)">
-    {{brand.brandName}}
-  </li>
-</ul>
-<h5 *ngIf="currentBrand">{{currentBrand.brandName}} seçtiniz</h5>
+
+<div class="accordion-item" style="margin-top: 10%;">
+  <h2 class="accordion-header" id="headingOne">
+    <button
+      class="accordion-button collapsed"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#collapseOne"
+      aria-expanded="true"
+      aria-controls="collapseOne"
+    >
+      Brands
+    </button>
+  </h2>
+  <div
+    id="collapseOne"
+    class="accordion-collapse collapse"
+    aria-labelledby="headingOne"
+    data-bs-parent="#accordionExample"
+  >
+    <div class="accordion-body">
+      <div class="mb-3">
+        <label for="filterText" class="form-label">Brand Search</label>
+        <input type="text" [(ngModel)]="filterText1" class="form-control" id="filterText1" placeholder="Search for a brand.">
+      </div>
+      
+      <ul class="list-group">
+        <li
+          *ngFor="let brand of brands | brandFilter:filterText1 "
+          (click)="this.setCurrentBrand(brand)"
+          routerLink="/cars/brands/{{ brand.brandId }}"
+          [class]="getCurrentBrandClass(brand)"
+         
+        >
+          {{ brand.brandName  }} <button class="btn btn-warning" routerLink="/cars/brandupdate/{{brand.brandId}}">Güncelle</button>
+          
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
