--- a/src/app/components/car-detail/car-detail.component.css
+++ b/src/app/components/car-detail/car-detail.component.css
@@ -1,4 +1,9 @@
 .image{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
+    float: left;
+}
+
+.row{
+margin-top: 10%;
 }
