revised navbar profile car

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <main class="form-signin">
     <form [formGroup]="loginForm">
-      <div class="image">
-      <img src="../../../assets/Icons/login.png"/></div>
+      <div>
+      <img  class="image" src="../../../assets/Icons/login.png"/></div>
       <h1 class="h3 mb-3 fw-normal text-center">Giriş Yap</h1>
     
       <div class="form-floating mb-3">
