--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,26 +1,61 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <img src="../../../assets/Icons/car.png" class="image" />
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Rent A Car</a>
+        </li>
+      </ul>
+      <form class="d-flex" *ngIf="checkIfLogin() == false">
+        <a class="btn btn-primary" routerLink="/login">Giriş Yap</a>
+
+        <a href="#" class="btn btn-primary">Kaydol</a>
+      </form>
+    </div>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngIf="checkIfLogin() == true" >
+      >
+      <li class="nav-item dropdown right">
+        <a
+          class="nav-link dropdown-toggle text-light"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          <h5>
+            <img src="../../../assets/Icons/user.png" />
+            {{ getFullName() | titlecase }}
+          </h5>
+        </a>
+
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li class="colorl">
+            <a class="dropdown-item" routerLink="/profile"
+              ><i class="bi bi-person-circle"></i>
+              <h5><img src="../../../assets/Icons/profile.png" /> Profil</h5>
+            </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <app-cart-summary></app-cart-summary>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <li>
+            <a class="dropdown-item" (click)="logOut()"
+              ><i class="bi bi-power"></i>
+              <h5><img src="../../../assets/Icons/logout.png" /> Çıkış Yap</h5>
+            </a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+      </li>
+    </ul>
+  </div>
+</nav>
