--- a/src/app/components/car-detail/car-detail.component.css
+++ b/src/app/components/car-detail/car-detail.component.css
@@ -1,9 +1,39 @@
 .image{
     width: 100%;
     height: 100%;
-    float: left;
+    margin-left: 4%;
+  
+}
+
+.card{
+    float:left
 }
 
 .row{
-margin-top: 10%;
+margin-top: 5%;
+}
+
+.carousel-inner{
+  
+    width: 95%;
+    height: 90%;
+}
+
+.container{
+   margin-top: -2%;
+    width: 60%;
+    height: 80%;
+}
+
+h1{
+    margin-left: 40%;
+    margin-top: 1%;
+}
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    color: cadetblue;
+}
+
+.btn {
+    margin-left: 4%;
+    width: 91%;
 }
