--- a/src/app/components/car-detail/car-detail.component.html
+++ b/src/app/components/car-detail/car-detail.component.html
@@ -1,34 +1,64 @@
+<h1><img src="../../../assets/Icons/caricon.png"> Car Details <img src="../../../assets/Icons/caricon.png"></h1><hr/>
 <div *ngFor="let car of cars" class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <img
+  <div
+    id="carouselExampleControls"
+    class="carousel slide"
+    data-bs-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
         *ngIf="car.carImage.length != 0"
         class="image"
         alt="Image"
         style="object-fit: contain"
         [src]="imgUrl + car.carImage[0].imagePath"
       />
+      </div>
+      <div class="carousel-item">
+        <img
+      *ngIf="car.carImage.length > 1"
+      class="image"
+      [src]="imgUrl + car.carImage[1].imagePath"
+    />
+      </div>
+     
+      <div class="carousel-item">
+        <img
+      *ngIf="car.carImage.length > 2"
+      class="image"
+      [src]="imgUrl + car.carImage[2].imagePath"
+    />
+      </div>
     </div>
-    <div class="col-md-4">
-      <img
-        *ngIf="car.carImage.length > 1"
-        class="image"
-        [src]="imgUrl + car.carImage[1].imagePath"
-      />
-    </div>
-    <div class="col-md-4">
-      <img
-        *ngIf="car.carImage.length > 2"
-        class="image"
-        [src]="imgUrl + car.carImage[2].imagePath"
-      />
-    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleControls"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleControls"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    
   </div>
-
   <a
-  routerLink="/cars/rentals/{{ car.carId }}"
-    type="button"
-    class="btn btn-success m-5"
-  >
-    Kirala
-  </a>
+routerLink="/cars/rentals/{{ car.carId }}"
+type="button"
+class="btn btn-success "
+>
+Kirala
+</a>
+
+
+</div>
+
