--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
   <div class="container-fluid">
     <img src="../../../assets/Icons/car.png" class="image" />
     <button
@@ -22,7 +22,7 @@
       <form class="d-flex" *ngIf="checkIfLogin() == false">
         <a class="btn btn-primary" routerLink="/login">Giriş Yap</a>
 
-        <a href="#" class="btn btn-primary">Kaydol</a>
+        <a href="#" class="btn btn-primary" routerLink="/register">Kaydol</a>
       </form>
     </div>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0" *ngIf="checkIfLogin() == true" >
@@ -45,13 +45,13 @@
           <li class="colorl">
             <a class="dropdown-item" routerLink="/profile"
               ><i class="bi bi-person-circle"></i>
-              <h5><img src="../../../assets/Icons/profile.png" /> Profil</h5>
+              <h5><img src="../../../assets/Icons/profile.png" /> Profile</h5>
             </a>
           </li>
           <li>
             <a class="dropdown-item" (click)="logOut()"
               ><i class="bi bi-power"></i>
-              <h5><img src="../../../assets/Icons/logout.png" /> Çıkış Yap</h5>
+              <h5><img src="../../../assets/Icons/logout.png" /> Log Out</h5>
             </a>
           </li>
         </ul>
