--- a/src/app/components/rental/rental.component.html
+++ b/src/app/components/rental/rental.component.html
@@ -1,56 +1,95 @@
-<div class="content" >
-    <div class="col-md-10 m-5" >
-      <div class="card">
-        <div class="card-header"><h5 class="Marka Ekle"></h5></div>
-        <div class="card-body">
-          <form [formGroup]="rentalAddForm">
-            <div class="form-group" >
-              <div class="mb-3" >
-            <label for="carId">Araba Id</label>
-                <div class="form-group" >
-                    <input type="number" 
-                    id="carId" 
-                    formControlName="carId" class="form-control" 
-                    placeholder="araba ıd ekle"/>
-                    
-                </div>
+<div class="content">
+  <div class="col-md-10 m-5">
+    <div class="card">
+      <div class="card-header"><h5 class="title">Rental Car</h5></div>
+      <div class="card-body">
+        <form [formGroup]="rentalAddForm">
+          <div class="form-group">
+            <div class="mb-3">
+              <div *ngFor="let car of cars">
+                <p>Findex Puanı : {{ car.minFindex }}</p>
               </div>
-              <div class="mb-3">
-                <label for="customerId">Müsteri Numaranız</label>
-                        <div class="form-group">
-                            <input type="number" 
-                            id="customerId" 
-                            formControlName="customerId" class="form-control" 
-                            placeholder="Müsteri Numaranızı giriniz"/>
-                        </div>
-              </div>
-              <div class="form-group row">
-                <label for="example-date-input" class="col-2 col-form-label">Rent Date</label>
+              
+              <div class="form-group row mb-3">
+                <label for="carId" class="col-2">Araba Numarası</label>
                 <div class="col-10">
-                  <input class="form-control" type="date" value="2011-08-19" 
-                  id="rentDate"
-                  class="form-select"
-                  formControlName="rentDate">
-                </div>
+                <input
+                  type="number"
+                  id="carId"
+                  formControlName="carId"
+                  class="form-control"
+                  placeholder="Araba no ekleyin"
+                />
               </div>
-              <div class="form-group row">
-                <label for="example-date-input" class="col-2 col-form-label">Return Date</label>
-                <div class="col-10">
-                  <input class="form-control" type="date" value="2011-08-19" 
-                  id="returnDate"
-                  class="form-select"
-                  formControlName="returnDate">
-                </div>
-              </div>
-              <div class="card-footer">
-                <button class="btn btn-fill btn-success" (click)="rental()">
-                  Ekle
-                </button>
               </div>
             </div>
-          </form>
-        </div>
+
+            <div class="form-group row mb-3" *ngIf="customer">
+              <label for="customerId">Müsteri Numaranız</label>
+              <div class="form-group">
+                <input
+                  type="number"
+                  id="customerId"
+                  formControlName="customerId"
+                  class="form-control"
+                  placeholder="Müsteri Numaranızı giriniz"
+                />
+              </div>
+            </div>
+            <div class="form-group row mb-3">
+              <label for="example-date-input" class="col-2 col-form-label"
+                >Rent Date</label
+              >
+              <div class="col-10">
+                <input
+                  class="form-control"
+                  type="date"
+                  value="2011-08-19"
+                  id="rentDate"
+                  class="form-select"
+                  formControlName="rentDate"
+                />
+              </div>
+            </div>
+            <div class="form-group row mb-3">
+              <label for="example-date-input" class="col-2 col-form-label"
+                >Return Date</label
+              >
+              <div class="col-10">
+                <input
+                  class="form-control"
+                  type="date"
+                  value="2011-08-19"
+                  id="returnDate"
+                  class="form-select"
+                  formControlName="returnDate"
+                />
+              </div>
+            </div>
+            <div class="form-group row mb-3">
+              <label for="example-date-input" class="col-2 col-form-label"
+                >Rezerve Edilmiş Tarihler</label
+              >
+              <div class="col-10">
+              <select id="carId" class="form-select " formControlName="rentalId">
+                <option>Aracın Dolu Olduğu Tarihler</option>
+                <option *ngFor="let rental of rentals">
+                  Kiralandığı Tarih:
+                  {{ rental.rentDate | date: "shortDate" }} Teslim Tarihi:{{
+                    rental.returnDate | date: "shortDate"
+                  }}
+                </option>
+              </select>
+              </div>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-fill btn-success" (click)="rental()">
+                Ekle
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
-  
+</div>
